Fix time scrollbar text overflow hidden issue.

--- a/src/main/webapp/styles/home.css
+++ b/src/main/webapp/styles/home.css
@@ -128,7 +128,7 @@
     right: 2%;
     top: 10%;
     height: 88%;
-    width: 13%;
+    width: 15%;
     overflow: hidden;
     background: url("../images/time-line-base.png") no-repeat 17px 6px;
     background-size: 57% 94%;
